tests/baselines/reference/unusedPrivateMethodInClass2.errors.txt
unusedPrivateMethodInClass2.ts(2,13): error TS6133: 'function1' is declared but its value is never read.
unusedPrivateMethodInClass2.ts(3,13): error TS6133: 'y' is declared but its value is never read.
unusedPrivateMethodInClass2.ts(6,13): error TS6133: 'function2' is declared but its value is never read.
unusedPrivateMethodInClass2.ts(7,13): error TS6133: 'y' is declared but its value is never read.


==== unusedPrivateMethodInClass2.ts (4 errors) ====
    class greeter {
        private function1() {
                ~~~~~~~~~
!!! error TS6133: 'function1' is declared but its value is never read.
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
        }
    
        private function2() {
                ~~~~~~~~~
!!! error TS6133: 'function2' is declared but its value is never read.
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
        }
    }